Report analytics completed